<resources>
    <string name="app_name">smartMirrorApp</string>
    <string name="prompt_email">"email "</string>
    <string name="prompt_username">user name</string>
    <string name="prompt_password_again">second writen passoword</string>
    <string name="action_log_in_short">log in</string>
    <string name="prompt_password">first writen password</string>
    <string name="action_sign_in">action sign in</string>
    <string name="gobacktologin">go back to log in</string>
    <string name="bottom_image">bottom image</string>
    <string name="button">Button</string>
    <string name="nickname">username</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="continue_with_google">continue with Google</string>
    <string name="forgot_my_password">forgot my password</string>
    <string name="register">register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="customise">Customise</string>
    <string name="music">Music</string>
    <string name="notifications">Notifications</string>
    <string name="home">News</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="faq">FAQ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="other">other</string>
    <string name="basic_activity">Basic Activity</string>
</resources>