<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications"/>

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music"
            android:title="@string/music"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/customise"
            android:title="@string/settings"/>

    </group>

    <item android:title="other">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/about_us"
                android:title="@string/about_us"/>

             <item
                android:id="@+id/nav_FAQ"
                android:icon="@drawable/faq"
                android:title="@string/faq"/>
            </group>
        </menu>

    </item>
</menu>